--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,18 +18,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
+  data_connection_checker:
+  flutter_secure_storage:
+  http:
+  get:
+  flutter_svg: ^0.19.0
+  equatable:
+  dartz:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  faker: ^1.2.1
+  lint: ^1.2.0
+  mockito: ^4.1.1
+  build_runner: ^1.9.0
   flutter_test:
     sdk: flutter
 
@@ -38,7 +48,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
